# ICPADS-MN-RU

./: .gitignore  CMakeLists.txt  README.md  run_compare_hnsw_prime_search_update.sh  wtf.h
src/: CMakeLists.txt  main.cpp
src/compute_groundtruth/: compute_gist_1M_groundTruth.cpp  compute_groundtruth_word2vec.cpp  compute_imageNet_2M_groundTruth.cpp  compute_imageNet_all_data_groundTruth.cpp  compute_imagenet_groundtruth.cpp  compute_netflix_groundtruth.cpp  compute_sift_groundtruth.cpp  compute_yahoomusic_groundtruth.cpp
src/construction/: CMakeLists.txt  base_graph.cpp  base_graph.h  hierarchy_graph.cpp  hierarchy_graph.h  node.cpp
src/construction/util/: CMakeLists.txt  util.cpp
src/data-structure/: CMakeLists.txt  point.cpp  point.h
src/direct_delete/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_add_new_point/sift/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_mult_batch/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_mult_batch/gist/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_mult_batch/imageNet/: direct_delete_prove.cpp  mark_delete.cpp  replaced_update_method9.cpp
src/direct_delete/compare_direct_delete_and_mark_mult_batch/sift/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_single_batch/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_single_batch/gist/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_single_batch/imageNet/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/compare_direct_delete_and_mark_single_batch/sift/: direct_delete_prove.cpp  mark_delete.cpp
src/direct_delete/generate_index/: generate_direct_index.cpp
src/evaluate/: CMakeLists.txt  evaluate.cpp
src/file/: CMakeLists.txt  file.cpp
src/freshdiskann_prove/: freshdiskann_prove.cpp  generate_freshdiskann_groundtruth.cpp  generate_freshdiskann_prove_index.cpp
src/generate_index/faiss/gist/: generate_index.cpp
src/generate_index/faiss/imageNet/: generate_index.cpp
src/generate_index/faiss/sift/: generate_index.cpp
src/generate_index/faiss/sift100M/: read.txt
src/generate_index/faiss/sift2M/: generate_index.cpp
src/generate_index/faiss/word2vec/: generate_index.cpp
src/generate_index/hnsw_maintenance/: generate_gist_index.cpp  generate_imageNet_index.cpp  generate_imageNet_index_test.cpp  generate_msong_index.cpp  generate_sift2M_index.cpp  generate_sift_200M_index.cpp  generate_sift_index.cpp  generate_word_vec_index.cpp
src/generate_index/hnsw_prime/: generate_gist_index.cpp  generate_imageNet_index.cpp  generate_netflix_index.cpp  generate_sift2M_index.cpp  generate_sift_index.cpp
src/hnsw_prime_search_mark_delete_compare/: compare_search_update_in_different_dataset.cpp
src/issue_statement/: CMakeLists.txt  compute_delete_update.cpp  compute_rebuild.cpp  delete_update_lose_recall.cpp
src/python/: generate_delete_back_half.py
src/python/calculate_recall/: brute_force.py  calcute_recall.py  freshdiskann_prove.py
src/python/draw_backup/: draw_backup.py
src/python/draw_figure1/: draw_figure1.py
src/python/draw_figure2/: draw_figure2.py  draw_figure2_extream.py  draw_figure2_extream_recall.py
src/python/draw_full_coverage/: draw_gist_end_recall.py  draw_gist_end_recall_100.py  draw_imageNet_2M_end_recall.py  draw_imageNet_2M_end_recall_10.py  draw_sift_end_recall_100.py  draw_word2vec_end_recall_100.py
src/python/draw_full_coverage/draw_gist/: draw_replaced_update_insert_time.py  draw_unreachable_point.py
src/python/draw_full_coverage/draw_imageNet/: draw_replaced_update_insert_time.py  draw_unreachable_point.py
src/python/draw_full_coverage/draw_sift/: draw_replaced_update_insert_time.py  (+1 more)
src/python/draw_new_insert/: draw_sift_2M_end_recall_100.py
src/python/draw_random/: draw_gist_end_recall.py  draw_gist_end_recall_100.py  draw_imageNet_2M_end_recall.py  draw_imageNet_2M_end_recall_10.py  draw_sift_end_recall_100.py
src/python/freshdiskann/: freshdiskannBuild.py
src/python/split_sift_200M/: compute_groundTruth.py  compute_in_place.py  compute_ivf_flat_in_place.py  compute_recall.py  compute_recall_1M.py  compute_recall_ivf_flat.py  generate_sift1M_index.py  generate_sift200M_index.py  generate_sift200M_ivf_index.py  split_sift_200M.py
src/python/split_sift_2M/: README.md  change_query_bvecs_to_fvecs.py  generate_sift2M_groundtruth.py  split_sift_2M.py
src/python/test/: generate_gist_ground_truth.py
src/replaced_update_vaild/compare_edge_connect_with_prime_full_coverage/: end_recall.cpp  end_recall_gist.cpp  end_recall_imageNet2M.cpp
src/replaced_update_vaild/compare_edge_connect_with_prime_new_insert/: end_recall.cpp
src/replaced_update_vaild/compare_edge_connect_with_prime_random/: end_recall.cpp  end_recall_faiss_imageNet.cpp  end_recall_faiss_sift.cpp  end_recall_gist.cpp  end_recall_imageNet2M.cpp
src/test/: compare_rawMMR_With_Dhnsw.cpp  compare_rawMMR_with_Dhnsw_in_ip.cpp  delete_update.cpp  export_cluster_graph.cpp  generate_index.cpp  generate_index_ip.cpp  generate_mmr_index.cpp  tes_mmr_and_normal.cpp
src/test/C++/: test_degree_percentage_gist.cpp  test_degree_percentage_imageNet.cpp  test_degree_percentage_msong.cpp  test_degree_percentage_sift.cpp  test_degree_percentage_word_vec.cpp  test_query_direct_gist.cpp  test_query_mark_gist.cpp
src/test/python/: calcute_recall.py  compare_delete_and_mark.py  generate_2D_data.py  generate_all_index.py  generate_back_index.py  generate_delete_back_half.py  generate_delete_index.py  generate_index.py  is_data_in_high_level_cluster.py  test_black_point.py
src/test/test_new_level_selection/: search_performance.cpp  test_new_level_selection.cpp  test_new_level_selection2.cpp
src/unreachable_points_phenomenon/: unreachable_points_phenomenon.cpp  unreachable_points_phenomenon_extream.cpp
src/util/: direct_delete_util.cpp  thread_pool.cpp  util.cpp
(+318 files in other folders)
